--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
             
         <Ul style="float:right; background-color:lightgoldenrodyellow";>
     
-            <li><p><a href="index.html"><em>My first website</em></p></li></a>
+            <li><p><a href="my-first-website.html"><em>My first website</em></p></li></a>
             <p>This is my first finished project. I made this wensday 11/3/2021. I was experimenting with linking, adding images and using basic css on this project. </p>
             <li><p><a href="Artifacts.html"><em>Artifacts</em></p></li></a>
             <p>I created this project on friday 11/6/2021. On this project I used div I learned on w3 and I started to apply advanced SCSS to make my websites look better</p>
